# VPFClass2

./: .gitignore  README.md  environment.yml  environment_cpu.yml  environment_cpu2.yml  environment_gpu.yml  pyproject.toml
models/sparse_family/: architecture.py  dataset.py  evaluate.py  inference.py  losses.py  training.py  utils.py
models/sparse_genus/: architecture.py  dataset.py  evaluate.py  inference.py  losses.py  training.py  utils.py
notebooks/: Auxiliar.ipynb  test.ipynb
scripts/: get_msl_models.sh  run_hmm_parallel.sh  run_hmm_parallel2.sh  run_hmm_scan.sh  run_prodigalgv_parallel.sh  setup_tool_data.sh  split_tblout.py
src/vpf_classifier/: cli.py
src/vpf_classifier/parsers/: fasta_parser.py  ictv_parser.py  prodigal_parser.py  vpf_parser.py
src/vpf_classifier/pipelines/: inference_pipeline.py  pipeline.py  vpf_class2.py
src/vpf_classifier/utils/: config.py  runtime_paths.py  utils.py
toy_example/: mini_test.fna
