[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpf-classifier"
version = "0.1.0"
description = "VPF-Class 2: user-facing viral classification pipeline"
requires-python = ">=3.10"
readme = "README.md"
# Dependencias opcionales: usas conda, así que puedes dejarlas vacías.
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vpfclass2 = "vpf_classifier.cli:main"